# domg

./: Dockerfile  LICENSE  Makefile  README.md  app.py  configurator.py  docker-compose.dev.yml  docker-compose.yml  dockerfile.py  hostmanager.py  lib.py  manager.py  requirements.txt  start.sh
.github/workflows/: makefile.yml
src/: Dockerfile  app.py  hostmanager.py  lib.py  pyproject.toml  start.sh
src/static/css/: theme.css
src/views/: base.html  container_group_row.html  container_row.html  details.html  hosts.html  images.html  logs.html
static/css/: bootstrap-theme.min.css  bootstrap.min.css
static/js/: bootstrap.min.js
views/: base.html  container_row.html  details.html  index.html
