[tool.poetry]
name = "domg"
version = "0.1.0"
description = "Docker container fqdn resolver via hosts file"
authors = ["Cosmin <talpah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bottle = "^0.12.23"
PyYAML = "^6.0"
docker = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
